--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "@tanstack/react-query": "^5.61.4",
+    "@tanstack/react-query-devtools": "^5.61.4",
+    "axios": "^1.7.8",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "postcss": "^8",
